--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "npm run build"
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "mocha": "^7.1.1",
     "mocha-jsdom": "^2.0.0",
     "ts-node": "^8.9.0",
-    "typescript": "^3.6.4"
+    "typescript": "^3.6.4",
+    ""
   }
 }
