--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "mocha": "^7.1.1",
     "mocha-jsdom": "^2.0.0",
     "ts-node": "^8.9.0",
-    "typescript": "^3.6.4",
-    ""
+    "typescript": "^3.6.4"
   }
 }
