--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha dist/test",
     "prepare": "npm run build"
   },
   "repository": {
