--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index",
   "scripts": {
-    "build": "tsc --version && tsc",
+    "build": "tsc",
     "test": "mocha dist/test",
     "prepare": "npm run build"
   },
