--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
 	"version": "1.0.0",
 	"description": "Standard library for TypeScript/JavaScript",
 	"main": "dist/index.js",
-	"types": "dist/index",
+	"types": "dist/index.d.ts",
+	"files": [
+		"dist"
+	],
 	"scripts": {
-		"build": "tsc",
+		"build": "ts-node --transpile-only ./tooling/build.ts",
 		"test": "mocha dist/test",
 		"prepare": "npm run build"
 	},
@@ -27,8 +30,11 @@
 		"@types/lodash": "^4.14.85",
 		"@types/mocha": "^7.0.2",
 		"@types/node": "^14.0.4",
+		"@types/shelljs": "^0.8.8",
 		"mocha": "^7.1.1",
+		"shelljs": "^0.8.4",
 		"ts-node": "^8.9.0",
-		"typescript": "^3.6.4"
+		"ts-node-dev": "^1.0.0-pre.44",
+		"typescript": "^3.9.3"
 	}
 }
