--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	"scripts": {
 		"build": "ts-node --transpile-only ./tooling/build.ts",
 		"test": "mocha dist/test",
-		"prepare": "npm run build"
+		"prepare": "echo 'Preparing StdLib' && npm run build"
 	},
 	"repository": {
 		"type": "git",
