--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"types": "dist/index.d.ts",
 	"files": [
 		"dist",
-		"!/dist/*.test.*"
+		"!/dist/**/*test.*"
 	],
 	"scripts": {
 		"setup": "rm -rf ./node_modules package-lock.json && npm install",
