--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
 	],
 	"scripts": {
 		"setup": "rm -rf ./node_modules package-lock.json && npm install",
-		"clean": "rm -rf ./dist .eslintcache",
+		"clean": "rm -rf ./dist .eslintcache *-report.json",
 		"lint": "eslint --ext ts --cache src/*",
 		"lint-report": "eslint --ext ts --output-file .lint-report.json --format json-standard --cache src/*",
-		"build": "tsc && rm -rf dist/*.test.js.map dist/*.test.d.ts",
-		"test": "mocha dist/**/_tests.js",
-		"test-report": "mocha dist/**/_tests.js --reporter mocha-reporter-json-standard >| .test-report.json",
-		"ci": "npm run clean && npm run lint && npm run build && npm run test"
+		"build": "npm run clean && tsc && rm -rf dist/*.test.js.map dist/*.test.d.ts",
+		"test": "mocha dist/**/*tests.js",
+		"test-report": "mocha dist/**/*tests.js --reporter mocha-reporter-json-standard >| .test-report.json",
+		"ci": "npm run lint && npm run build && npm run test"
 	},
 	"repository": {
 		"type": "git",
