--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -42,6 +42,17 @@ jobs:
         uses: agyemanjp/ci-checks-action@1.0.2
         with:
           ghToken: "${{ secrets.GITHUB_TOKEN }}"
-          checks: "test:.test-report.json|lint:.lint-report.json"
+          checks: '[
+              {
+                "name": "lint",
+                "fileName": ".lint-report.json",
+                "prChangesOnly": true
+              },
+              {
+                "name": "test",
+                "fileName": ".test-report.json",
+                "prChangesOnly": false
+              }
+            ]'
         
      
