--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 	"homepage": "https://github.com/Hypothesize/standard.js#readme",
 	"devDependencies": {
 		"@types/assert": "^1.5.1",
+		"@types/jest": "^29.5.11",
 		"@types/mocha": "^7.0.2",
 		"@types/node": "^14.0.4",
 		"@types/source-map-support": "^0.5.1",
@@ -54,21 +55,26 @@
 		"eslint": "^7.28.0",
 		"eslint-formatter-json-standard": "^1.0.0",
 		"eslint-plugin-fp": "^2.3.0",
-		"mocha": "^8.4.0",
+		"eslint-plugin-mocha": "^10.2.0",
+		"jasmine": "^5.1.0",
+		"jest": "^29.7.0",
+		"jest-codemods": "^0.32.0",
+		"mocha": "10.2.0",
 		"mocha-reporter-json-standard": "^1.0.0",
 		"npm-run-all": "^4.1.5",
 		"source-map-support": "^0.5.19",
-		"ts-node": "^9.0.0",
+		"ts-jest": "^29.1.1",
+		"ts-node": "10.9.2",
 		"typescript": "^4.8.2"
 	},
 	"scripts": {
-		"deps": "rm -rf ./node_modules package-lock.json && npm install",
+		"deps": "rm -rf ./node_modules package-lock.json yarn.lock pnpm-lock.yaml && pnpm install",
 		"clean": "rm -rf dist/* .eslintcache *-report.json",
 		"lint": "eslint --cache 'src/**'",
 		"lintci": "eslint --output-file .lint.run.json --format json-standard --cache 'src/**'",
 		"compile": "tsc",
-		"test": "mocha --require ts-node/register test/*.test.*",
-		"testci": "mocha --require ts-node/register test/*.test.* --reporter mocha-reporter-json-standard >| .test.run.json",
+		"test": "jest",
+		"testci": "mocha -r ts-node/register test/*.test.* --reporter mocha-reporter-json-standard >| .test.run.json",
 		"build": "run-s clean lint compile test",
 		"pubstage": "cp package.json LICENSE README.md dist",
 		"package": "npm run pubstage && cd dist && npm publish --dry-run && cd ..",
