--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
         
       - name: Install
-        run: npm ci --no-audit --prefer-offline 
+        run: pnpm install --prefer-offline
    
       - name: Check
         run: run-s lint build test
