--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [16.x]
 
     steps:
       - name: Checkout
@@ -25,10 +25,15 @@ jobs:
           node-version: ${{ matrix.node-version }}
         
       - name: Install
-        run: npm ci --no-audit --prefer-offline 
+        run: |
+          npm install --global pnpm 
+          pnpm install --prefer-offline
    
       - name: Check
-        run: run-s lint build test
+        run: |
+          pnpm run lint 
+          pnpm run build
+          pnpm run test
         continue-on-error: true
          
       - name: Annotate
