--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,17 +26,17 @@
            registry-url: 'https://registry.npmjs.org'
          if: ${{ steps.release.outputs.release_created }}
 
-       - run: 
-          | npm install -g pnpm
-          | pnpm deps
+       - run: |
+          npm install -g pnpm
+          pnpm deps
          if: ${{ steps.release.outputs.release_created }}
          
-       - run: 
-          | pnpm lint
-          | pnpm build
-          | pnpm pubstage
-          | cd dist
-          | npm publish
+       - run: |
+          pnpm lint
+          pnpm build
+          pnpm pubstage
+          cd dist
+          npm publish
          env:
            NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
          if: ${{ steps.release.outputs.release_created }}
